--- a/000. Les bases du C-Sharp/000. Les bases du C-Sharp.csproj
+++ b/000. Les bases du C-Sharp/000. Les bases du C-Sharp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <RootNamespace>_000._Les_bases_du_C_Sharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
